# cmake_qt_demo

./: CMakeLists.txt
3td_packages/: Findlibusb-1.0.cmake
3td_packages/libusb-1.0.21/: README.txt
src/: CMakeLists.txt
src/forms/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  cmake_test_form.ui
src/main/: CMakeLists.txt  main.cpp
src/module1/: CMakeLists.txt  MocClass.cpp  MocClass.h
